--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview --port 8080"
   },
   "dependencies": {
     "@headlessui/vue": "^1.7.13",
@@ -23,7 +23,6 @@
     "@vicons/utils": "^0.1.4",
     "@vitejs/plugin-vue": "^4.0.0",
     "autoprefixer": "^10.4.14",
-    "naive-ui": "^2.34.3",
     "postcss": "^8.4.23",
     "tailwindcss": "^3.3.2",
     "unplugin-auto-import": "^0.15.3",
